# docs/swagger.json
@@ -86,6 +86,11 @@
         },
         "/order/create": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Create order",
                 "consumes": [
                     "application/json"
@@ -207,13 +212,13 @@
                         "type": "integer",
                         "description": "Page number",
                         "name": "page",
-                        "in": "path"
+                        "in": "query"
                     },
                     {
                         "type": "integer",
                         "description": "Page size",
                         "name": "pageSize",
-                        "in": "path"
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -288,7 +293,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/top-up-api_internal_schema.UserLoginDetail"
+                            "$ref": "#/definitions/top-up-api_internal_schema.Response"
                         }
                     }
                 }
@@ -394,8 +399,14 @@
                         "$ref": "#/definitions/top-up-api_internal_schema.CardDetailMiniatureResponse"
                     }
                 },
-                "provider": {
-                    "$ref": "#/definitions/top-up-api_internal_schema.ProviderInfo"
+                "provider_code": {
+                    "type": "string"
+                },
+                "provider_logo_url": {
+                    "type": "string"
+                },
+                "provider_name": {
+                    "type": "string"
                 }
             }
         },
@@ -413,8 +424,8 @@
         "top-up-api_internal_schema.OrderConfirmRequest": {
             "type": "object",
             "properties": {
-                "card_detail": {
-                    "$ref": "#/definitions/top-up-api_internal_schema.CardDetailResponse"
+                "card_detail_id": {
+                    "type": "integer"
                 },
                 "cash_back_value": {
                     "type": "integer"
@@ -592,20 +603,6 @@
                     "type": "string",
                     "maxLength": 10,
                     "minLength": 10
-                }
-            }
-        },
-        "top-up-api_internal_schema.UserLoginDetail": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "phone_number": {
-                    "type": "string"
                 }
             }
         },
